# mailbox-ai

./: .gitignore  AI_SETUP_GUIDE.md  LOCAL_EMBEDDINGS_SETUP.md  QUICK_START.md  README.md  REDIS_VECTOR_SETUP.md  RUN_COMMANDS.sh  SEMANTIC_SEARCH_IMPLEMENTATION.md  SETUP_BATCH_PROCESSING.md  START_HERE.md  TESTING_GUIDE.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  docker-build.yml
ai-service/: .env.example  Dockerfile  README.md  list_models.py  main.py  pyproject.toml  pyrightconfig.json  start-ai-service.sh  test_gemini.py
ai-service/app/api/v1/: __init__.py
ai-service/app/api/v1/endpoints/: __init__.py  search_vector.py  summarization.py
ai-service/app/core/: config.py
ai-service/app/db/: base.py
ai-service/app/schemas/: __init__.py  search_vector.py  summarization.py
ai-service/app/services/: search_vector_service.py  summarization_service.py
ai-service/app/tests/: __init__.py
backend/: .dockerignore  .env.example  .prettierrc  API_QUICK_REFERENCE.md  AUTH_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MOCK_API_DOCUMENTATION.md  MOCK_DATA_SUMMARY.md  OAUTH2_IMAP_IMPLEMENTATION.md  README.md  RESET_AND_SETUP.md  SEMANTIC_SEARCH_SETUP.md  check-user-emails.ts  debug-semantic-search.ts  docker-compose.yml  package-lock.json  package.json  test-semantic-now.ts  verify-embeddings.ts
backend/.archived/: vector-worker.ts
backend/prisma/: clear-summaries.sql  schema.prisma
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
frontend/: Dockerfile  HOWTOUSEFETCH.md  README.md  package-lock.json  package.json
(+239 files in other folders)
