[project]
name = "ai-service"
version = "0.1.0"
description = "AI-powered email summarization service using LangChain and Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]
